--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,10 @@ rustc-hex = "2.1.0"
 serde_json = "1.0.67"
 rpassword = "5.0.1"
 evm = "0.30.1"
-rayon = "1.5.1"
+rayon = { version = "1.5.1", optional = true }
 
 [patch.'crates-io']
 ethabi = { git = "https://github.com/gakonst/ethabi/", branch = "patch-1" }
+
+[features]
+parallel = ['rayon']
