--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rustc-hex = "2.1.0"
 serde_json = "1.0.67"
 rpassword = "5.0.1"
 evm = "0.30.1"
+ansi_term = "0.12.1"
 
 [patch.'crates-io']
 ethabi = { git = "https://github.com/gakonst/ethabi/", branch = "patch-1" }
