refactor: split out seth to shared package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2018"
 
 [workspace]
 members = [
-    "utils"
+    "utils",
+    "seth",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
