chore: binary size optimizations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,10 @@ members = [
     "dapp",
     "dapptools",
 ]
+
+# Binary size optimizations
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
