--- a/seth/Cargo.toml
+++ b/seth/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 [dependencies]
 dapp-utils = { path = "../utils" }
 # ethers = "0.5"
-ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
+ethers-core = { git = "https://github.com/gakonst/ethers-rs", branch = "master", default-features = false }
+ethers-providers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", default-features = false }
 eyre = "0.6.5"
 rustc-hex = "2.1.0"
 serde_json = "1.0.67"
