--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 
 [dependencies]
 # ethers = "0.5"
-ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
+ethers-core = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 
-eyre = "0.6.5"
-rustc-hex = "2.1.0"
-serde_json = "1.0.67"
+eyre = { version = "0.6.5", default-features = false }
+rustc-hex = { version = "2.1.0", default-features = false }
+serde_json = { version = "1.0.67", default-features = false }
 
