--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           cache-on-failure: true
 
       - name: cargo test
-        run: cargo test --all -- --nocapture
+        run: cargo test --all
 
   tests-stable:
     name: Tests (Stable)
@@ -45,7 +45,7 @@ jobs:
           cache-on-failure: true
 
       - name: cargo test
-        run: cargo test --all -- --nocapture
+        run: cargo test --all
 
   lint:
     runs-on: ubuntu-latest
