--- a/evm-adapters/Cargo.toml
+++ b/evm-adapters/Cargo.toml
@@ -20,6 +20,7 @@ ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 eyre = "0.6.5"
 once_cell = "1.8.0"
 tracing = "0.1.28"
+bytes = "1.1.0"
 
 [dev-dependencies]
 evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
@@ -28,3 +29,4 @@ evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
 default = ["sputnik"]
 
 sputnik-helpers = ["sputnik"]
+evmodin-helpers = ["evmodin"]
