--- a/evm-adapters/Cargo.toml
+++ b/evm-adapters/Cargo.toml
@@ -26,7 +26,7 @@ bytes = "1.1.0"
 evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
 
 [features]
-default = ["sputnik"]
+default = ["sputnik", "evmodin"]
 
 sputnik-helpers = ["sputnik"]
 evmodin-helpers = ["evmodin"]
