--- a/dapptools/Cargo.toml
+++ b/dapptools/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 structopt = "0.3.23"
 dapp-utils = { path = "../utils" }
+dapp-solc = { path = "../solc" }
 dapp = { path = "../dapp" }
 seth = { path = "../seth" }
 
