--- a/dapptools/Cargo.toml
+++ b/dapptools/Cargo.toml
@@ -12,7 +12,7 @@ dapp-utils = { path = "../utils" }
 dapp-solc = { path = "../solc" }
 dapp = { path = "../dapp" }
 seth = { path = "../seth" }
-
+evm-adapters = { path = "../evm-adapters" }
 # ethers = "0.5"
 ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 eyre = "0.6.5"
@@ -23,6 +23,16 @@ regex = { version = "1.5.4", default-features = false }
 ansi_term = "0.12.1"
 rpassword = "5.0.1"
 tracing-subscriber = "0.2.20"
+
+## EVM Implementations
+# evm = { version = "0.30.1" }
+sputnik = { package = "evm", git = "https://github.com/gakonst/evm",  optional = true }
+evmodin = { git = "https://github.com/vorot93/evmodin",  optional = true }
+
+[features]
+default = ["sputnik-evm", "evmodin"]
+sputnik-evm = ["sputnik", "evm-adapters/sputnik"]
+# evmodin = ["evm-adapters/evmodin"]
 
 [[bin]]
 name = "seth"
