--- a/dapp/Cargo.toml
+++ b/dapp/Cargo.toml
@@ -32,4 +32,4 @@ proptest = "1.0.0"
 evm-adapters = { path = "./../evm-adapters", features = ["sputnik", "sputnik-helpers", "evmodin", "evmodin-helpers"] }
 evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
 # evm = { version = "0.30.1" }
-evm = { git = "https://github.com/gakonst/evm" }
+evm = { git = "https://github.com/rust-blockchain/evm" }
