--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ panic = "abort"
 
 [patch."https://github.com/rust-blockchain/evm"]
 evm = { git = "https://github.com/gakonst/evm", branch = "feat/clone-debug" }
+
+[patch."https://github.com/vorot93/evmodin"]
+evmodin = { git = "https://github.com/gakonst/evmodin", branch = "feat/clone-debug" }
