--- a/dapptools/Cargo.toml
+++ b/dapptools/Cargo.toml
@@ -29,6 +29,7 @@ tracing = "0.1.26"
 # evm = { version = "0.30.1" }
 sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm",  optional = true }
 evmodin = { git = "https://github.com/vorot93/evmodin", optional = true }
+proptest = "1.0.0"
 
 [features]
 default = ["sputnik-evm", "evmodin-evm"]
