replace cache with down/up(load) artifacts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,11 +28,19 @@ jobs:
         with:
           command: build
           args: --release
-  build-linux-packages:
+      - name: Archive production artifacts
+        uses: actions/upload-artifacts@v2
+        with:
+            name: target-${{ matrix.os }}
+            path: ./target/release
     runs-on: ubuntu-latest
     needs: build-artifacts
     steps:
       - uses: actions/checkout@v2
+      - name: Download production artifacts
+        uses: actions/download-artifacts@v2
+        with:
+          name: target-ubuntu-latest
       - uses: kentik/pkg@v1
         name: Build RPM package
         id: build_rpm
@@ -52,37 +60,31 @@ jobs:
           format: deb
           package: packaging/package.yml
       - name: Save artifacts
-        uses: actions/cache@2
-        env:
-          cache-name: artiacts-cache
+        uses: actions/download-artifacts@v2
         with:
           path: |
             ./${{ steps.build_deb.outputs.package }}
             ./${{ steps.build_rpm.outputs.package }}
-          key: linux-packages-${{ github.ref }}
   create-release:
     runs-on: ubuntu-latest
     needs:  [build-linux-artifacts, build-artifacts]
     steps:
       - name: Restore artifacts
-        uses: actions/cache@2
-        env:
-          cache-name: artiacts-cache
+        uses: actions/download-artifacts@v2
         with:
           path: |
             ./${{ steps.build_deb.outputs.package }}
             ./${{ steps.build_rpm.outputs.package }}
-          key: linux-packages-${{ github.ref }
-      - name: Build Changelog<F6>
+      - name: Build Changelog
         id: github_release
         uses: mikepenz/release-changelog-builder-action@v2.4.2
         env:
-          G_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.G_TOKEN }}
      - name: Create Release
        id: create-release
        uses: softprops/action-gh-release@vv0.1.13
        env:
-         G_TOKEN: ${{ env.GITHUB_TOKEN }}
+         GITHUB_TOKEN: ${{ secrets.G_TOKEN }}
        with:
          tag_name: ${{ github.ref }}
          release_name: ${{ github.ref }}
