--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
         with:
             name: target-${{ matrix.os }}
             path: ./target/release
+  build-linux-packages:
     runs-on: ubuntu-latest
     needs: build-artifacts
     steps:
@@ -67,7 +68,7 @@ jobs:
             ./${{ steps.build_rpm.outputs.package }}
   create-release:
     runs-on: ubuntu-latest
-    needs:  [build-linux-artifacts, build-artifacts]
+    needs:  [build-linux-packages, build-artifacts]
     steps:
       - name: Restore artifacts
         uses: actions/download-artifacts@v2
