--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           command: build
           args: --release
       - name: Archive production artifacts
-        uses: actions/upload-artifacts@v2
+        uses: actions/upload-artifact@v2
         with:
             name: target-${{ matrix.os }}
             path: ./target/release
@@ -39,7 +39,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Download production artifacts
-        uses: actions/download-artifacts@v2
+        uses: actions/download-artifact@v2
         with:
           name: target-ubuntu-latest
       - uses: kentik/pkg@v1
@@ -61,7 +61,7 @@ jobs:
           format: deb
           package: packaging/package.yml
       - name: Save artifacts
-        uses: actions/download-artifacts@v2
+        uses: actions/download-artifact@v2
         with:
           path: |
             ./${{ steps.build_deb.outputs.package }}
@@ -71,7 +71,7 @@ jobs:
     needs:  [build-linux-packages, build-artifacts]
     steps:
       - name: Restore artifacts
-        uses: actions/download-artifacts@v2
+        uses: actions/download-artifact@v2
         with:
           path: |
             ./${{ steps.build_deb.outputs.package }}
