--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: target-ubuntu-latest
-      - uses: kentik/pkg@vv1
+      - uses: kentik/pkg@v1.0.0-rc7
         name: Build RPM package
         id: build_rpm
         with:
@@ -53,7 +53,7 @@ jobs:
           arch: x86_64
           format: rpm
           package: packaging/package.yml
-      - uses: kentik/pkg@v1
+      - uses: kentik/pkg@v1.0.0-rc7
         name: Build DEB package
         id: build_deb
         with:
