--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
             ./${{ steps.build_rpm.outputs.package }}
   create-release:
     runs-on: ubuntu-latest
-    needs:  [build-linux-packahosges, build-artifacts]
+    needs:  [build-linux-packages, build-artifacts]
     steps:
       - name: Restore artifacts
         uses: actions/download-artifact@v2
