--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,12 +23,13 @@ jobs:
         with:
           toolchain: stable
           ovverride: true
+      - uses: Swatinem/rust-cache@v1
       - name: cargo build
         uses: actions-rs/cargo@v1
         with:
           command: build
           args: --release
-      - name: Archive production artifacts
+      - name: Upload production artifacts
         uses: actions/upload-artifact@v2
         with:
             name: target-${{ matrix.os }}
@@ -129,12 +130,12 @@ jobs:
            sudo reprepro -b /var/repositories includedeb ${codename} ${deb}
            rm /tmp/*.deb
            rm /tmp/*.rpm
-            #      - name: Bump Homebrew formula
-            #        runs-on: ubuntu-latest
-            #        steps:
-            #         uses: mislav/bump-homebrew-formula-action@v1.12
-            #         with:
-            #           formula-name: dapptools-rs
-            #         env:
-            #          COMMITTER_TOKEN: ${{ secrets.G_TOKEN }}
+#      - name: Bump Homebrew formula
+#        runs-on: ubuntu-latest
+#        steps:
+#         uses: mislav/bump-homebrew-formula-action@v1.12
+#         with:
+#           formula-name: dapptools-rs
+#         env:
+#          COMMITTER_TOKEN: ${{ secrets.G_TOKEN }}
 
