--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ panic = "abort"
 
 
 [patch."https://github.com/rust-blockchain/evm"]
+# evm = { path = "../evm" }
 evm = { git = "https://github.com/gakonst/evm", branch = "chore/expose-stack-module" }
