--- a/evm-adapters/Cargo.toml
+++ b/evm-adapters/Cargo.toml
@@ -25,6 +25,7 @@ tokio = { version = "1.12.0", features = ["rt-multi-thread"] }
 hex = "0.4.3"
 thiserror = "1.0.29"
 proptest = "1.0.0"
+futures = "0.3.17"
 
 [dev-dependencies]
 evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
