--- a/dapp/Cargo.toml
+++ b/dapp/Cargo.toml
@@ -15,15 +15,20 @@ evm-adapters = { path = "./../evm-adapters", default-features = false }
 ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 svm = { package = "svm-rs", git = "https://github.com/roynalnaruto/svm-rs" }
 
+axum = "0.2.8"
+erased-serde = "0.3"
 eyre = "0.6.5"
+futures = "0.3"
+http = "0.2"
 semver = "1.0.4"
-serde_json = "1.0.67"
-serde = "1.0.130"
+serde = { version = "1.0.130", features = ["derive"] }
+serde_json = { version = "1.0.67", features = ["raw_value"] }
 regex = { version = "1.5.4", default-features = false }
 hex = "0.4.3"
 glob = "0.3.0"
 # TODO: Trim
 tokio = { version = "1.10.1" }
+tower = "0.4.8"
 tracing = "0.1.26"
 tracing-subscriber = "0.2.20"
 proptest = "1.0.0"
@@ -34,3 +39,4 @@ evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
 # evm = { version = "0.30.1" }
 evm = { git = "https://github.com/rust-blockchain/evm" }
 dapp-solc = { path = "./../solc", features = ["sync"] }
+rand = "0.8"
