--- a/dapptools/Cargo.toml
+++ b/dapptools/Cargo.toml
@@ -22,6 +22,7 @@ serde_json = "1.0.67"
 tokio = { version = "1.11.0", features = ["macros"] }
 regex = { version = "1.5.4", default-features = false }
 ansi_term = "0.12.1"
+once_cell = "1.8.0"
 rpassword = "5.0.1"
 tracing-subscriber = "0.2.20"
 tracing = "0.1.26"
