--- a/solc/Cargo.toml
+++ b/solc/Cargo.toml
@@ -19,6 +19,9 @@ tracing = "0.1.28"
 glob = "0.3.0"
 tokio = "1.12.0"
 rayon = "1.5.1"
+solang = { git = "https://github.com/hyperledger-labs/solang" }
 
 [features]
+#default = ["solang"]
 sync = []
+#solang-parse = ["solang"]
