--- a/evm-adapters/Cargo.toml
+++ b/evm-adapters/Cargo.toml
@@ -15,8 +15,7 @@ sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm",  op
 evmodin = { git = "https://github.com/vorot93/evmodin",  optional = true }
 
 # ethers = { version = "0.5.2" }
-# ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "feat/multi-solc-detection", features = ["solc-full"] }
-ethers = { path = "../../ethers-rs", features = ["solc-full"] }
+ethers = { git = "https://github.com/gakonst/ethers-rs"}
 eyre = "0.6.5"
 once_cell = "1.8.0"
 tracing = "0.1.28"
