feat: break binaries into respective packages
This commit breaks the foundry package into 3  packages:
- Foundry: The entire framework
- Cast: only cast
- Forge: Only forge

bugfix: typo

bugfix: break reprepro into different commands for multiple distributions

bugfix: reprepro find correct pkg name
(cherry picked from commit c16e73a88add3299302526cfc1d0c58b802cb025)

--- a/packaging/foundry.yml
+++ b/packaging/foundry.yml
@@ -1,5 +1,5 @@
 meta:
-  description: A drop-in replacement for Dapptools, written in Rust.
+  description: Foundry is a blazing fast, portable and modular toolkit for Ethereum application development written in Rust.
   maintainer: Odysseas Lamtzidis
 files:
   "/usr/bin/forge":
