--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,30 +49,70 @@ jobs:
           path: ./target/release/
           name: target-ubuntu-latest
       - uses: kentik/pkg@v1.0.0-rc7
-        name: Build RPM package
-        id: build_rpm
+        name: Build foundry RPM package
+        id: build_rpm_foundry
         with:
           name: foundry
           version: ${{ steps.vars.outputs.tag }}
           arch: x86_64
           format: rpm
-          package: packaging/package.yml
+          package: packaging/foundry.yml
       - uses: kentik/pkg@v1.0.0-rc7
-        name: Build DEB package
-        id: build_deb
+        name: Build cast RPM package
+        id: build_rpm_cast
+        with:
+          name: cast
+          version: ${{ steps.vars.outputs.tag }}
+          arch: x86_64
+          format: rpm
+          package: packaging/cast.yml
+      - uses: kentik/pkg@v1.0.0-rc7
+        name: Build forge RPM package
+        id: build_rpm_forge
+        with:
+          name: forge
+          version: ${{ steps.vars.outputs.tag }}
+          arch: x86_64
+          format: rpm
+          package: packaging/forge.yml
+      - uses: kentik/pkg@v1.0.0-rc7
+        name: Build cast DEB package
+        id: build_deb_cast
+        with:
+          name: cast
+          version: ${{ steps.vars.outputs.tag }}
+          arch: x86_64
+          format: deb
+          package: packaging/cast.yml
+      - uses: kentik/pkg@v1.0.0-rc7
+        name: Build foundry DEB package
+        id: build_foundry_cast
         with:
           name: foundry
           version: ${{ steps.vars.outputs.tag }}
           arch: x86_64
           format: deb
-          package: packaging/package.yml
+          package: packaging/foundry.yml
+      - uses: kentik/pkg@v1.0.0-rc7
+        name: Build forge DEB package
+        id: build_deb_forge
+        with:
+          name: forge
+          version: ${{ steps.vars.outputs.tag }}
+          arch: x86_64
+          format: deb
+          package: packaging/forge.yml
       - name: Save artifacts
         uses: actions/upload-artifact@v2
         with:
           name: linux-packages
           path: |
-            ./${{ steps.build_deb.outputs.package }}
-            ./${{ steps.build_rpm.outputs.package }}
+            ./${{ steps.build_deb_cast.outputs.package }}
+            ./${{ steps.build_rpm_cast.outputs.package }}
+            ./${{ steps.build_deb_forge.outputs.package }}
+            ./${{ steps.build_rpm_forge.outputs.package }}
+            ./${{ steps.build_deb_foundry.outputs.package }}
+            ./${{ steps.build_rpm_foundry.outputs.package }}
   create-release:
     runs-on: ubuntu-latest
     needs:  [build-linux-packages, build-artifacts]
@@ -126,6 +166,8 @@ jobs:
         script_stop: true
         script: |
            cd /tmp/linux-packages
-           codename=$( cat /var/repositories/conf/distributions | grep Codename | awk '{print $2}')
-           sudo reprepro -b /var/repositories -C main includedeb ${codename} *.deb
+           codename=$( cat /var/repositories/conf/distributions | grep Codename | awk 'NR==1{print $2}')
+           sudo reprepro -b /var/repositories -C main includedeb bullseye-cast $(ls | grep cast)
+           sudo reprepro -b /var/repositories -C main includedeb bullseye-forge $(ls | grep forge)
+           sudo reprepro -b /var/repositories -C main includedeb bullseye-foundry $(ls | grep foundry)
            rm -rf /tmp/linux-packages
