chore: use published versions of ethers/evm/evmodin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ lto = true
 codegen-units = 1
 panic = "abort"
 
-[patch."https://github.com/rust-blockchain/evm"]
+[patch.crates-io]
 evm = { git = "https://github.com/gakonst/evm", branch = "feat/auto-impl" }
