--- a/cast/Cargo.toml
+++ b/cast/Cargo.toml
@@ -8,9 +8,8 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 foundry-utils = { path = "../utils" }
-# ethers = "0.5"
-ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
-ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+ethers-core = { version = "^0.6.0", default-features = false }
+ethers-providers = { version = "^0.6.0", default-features = false }
 eyre = "0.6.5"
 rustc-hex = "2.1.0"
 serde_json = "1.0.67"
