--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -14,8 +14,7 @@ cast = { path = "../cast" }
 evm-adapters = { path = "../evm-adapters" }
 
 # ethers = "0.5"
-ethers = { git = "https://github.com/gakonst/ethers-rs" }
-ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs" }
+ethers = { version = "^0.6.0" }
 eyre = "0.6.5"
 rustc-hex = "2.1.0"
 serde_json = "1.0.67"
@@ -27,8 +26,7 @@ tracing-subscriber = "0.2.20"
 tracing = "0.1.26"
 
 ## EVM Implementations
-# evm = { version = "0.30.1" }
-sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm",  optional = true }
+sputnik = { package = "evm", version = "^0.33.0",  optional = true }
 evmodin = { git = "https://github.com/vorot93/evmodin", optional = true }
 proptest = "1.0.0"
 git2 = "0.13.22"
