--- a/evm-adapters/Cargo.toml
+++ b/evm-adapters/Cargo.toml
@@ -9,11 +9,10 @@ edition = "2021"
 [dependencies]
 foundry-utils = { path = "./../utils" }
 
-sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm",  optional = true, features = ["tracing"] }
-
+sputnik = { package = "evm", version = "^0.33.0",  optional = true, features = ["tracing"] }
 evmodin = { git = "https://github.com/vorot93/evmodin",  optional = true }
 
-ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["solc-full"] }
+ethers = { version = "^0.6.0", features = ["solc-full"] }
 eyre = "0.6.5"
 once_cell = "1.8.0"
 tracing = "0.1.28"
@@ -28,7 +27,7 @@ revm_precompiles = "0.1.0"
 
 [dev-dependencies]
 evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
-ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["solc-full", "solc-tests"] }
+ethers = { version = "^0.6.0", features = ["solc-full", "solc-tests"] }
 
 [features]
 sputnik-helpers = ["sputnik"]
