--- a/forge/Cargo.toml
+++ b/forge/Cargo.toml
@@ -7,11 +7,10 @@ license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-foundry-utils = { path = "./../utils" }
-evm-adapters = { path = "./../evm-adapters", default-features = false }
+foundry-utils = { version = "^0.1.0", path = "./../utils" }
+evm-adapters = { version = "^0.1.0", path = "./../evm-adapters", default-features = false }
 
-# ethers = { version = "0.5.2" }
-ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["solc-full"] }
+ethers = { version = "^0.6.0", features = ["solc-full"] }
 
 eyre = "0.6.5"
 semver = "1.0.4"
@@ -30,4 +29,4 @@ proptest = "1.0.0"
 evm-adapters = { path = "./../evm-adapters", features = ["sputnik", "sputnik-helpers", "evmodin", "evmodin-helpers"] }
 evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
 evm = { git = "https://github.com/rust-blockchain/evm" }
-ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["solc-full", "solc-tests"] }
+ethers = { version = "^0.6.0", features = ["solc-full", "solc-tests"] }
