--- a/evm-adapters/Cargo.toml
+++ b/evm-adapters/Cargo.toml
@@ -26,6 +26,8 @@ parking_lot = "0.11.2"
 futures = "0.3.17"
 revm_precompiles = "0.1.0"
 serde_json = "1.0.72"
+serde = "1.0.130"
+ansi_term = "0.12.1"
 
 [dev-dependencies]
 evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
