--- a/fmt/Cargo.toml
+++ b/fmt/Cargo.toml
@@ -7,3 +7,6 @@ description = "Foundry's solidity formatting and linting support"
 [dependencies]
 indenter = { version = "0.3.3", features = ["std"] }
 solang = { git = "https://github.com/hyperledger-labs/solang" }
+
+[dev-dependencies]
+pretty_assertions = "1.0.0"
