add llvm install and env var set to lint step

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -63,12 +63,29 @@ jobs:
           components: rustfmt, clippy
           override: true
 
+      - name: Cache LLVM and Clang
+        id: cache-llvm
+        uses: actions/cache@v2
+        with:
+          path: $HOME/.clang
+          key: llvm-13.0
+      - name: Install LLVM and Clang
+        uses: KyleMayes/install-llvm-action@v1
+        with:
+          version: "13.0"
+          directory: $HOME/.clang
+          cached: ${{ steps.cache-llvm.outputs.cache-hit }}
+
       - uses: Swatinem/rust-cache@v1
         with:
           cache-on-failure: true
 
       - name: cargo fmt
         run: cargo +nightly fmt --all -- --check
+        env:
+          LLVM_SYS_130_PREFIX: ${{ env.LLVM_PATH }}
 
       - name: cargo clippy
         run: cargo +nightly clippy --all --all-features -- -D warnings
+        env:
+          LLVM_SYS_130_PREFIX: ${{ env.LLVM_PATH }}
