set correct build arg

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -142,4 +142,4 @@ jobs:
         with:
           use-cross: ${{ matrix.job.use-cross }}
           command: run
-          args: cargo run --bin forge -- --help
+          args: -p foundry-cli --bin forge -- --help
