install openssl on ubuntu

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -92,7 +92,7 @@ jobs:
         if: matrix.os == 'ubuntu-18.04'
         run: |
           ci/ubuntu-install-packages
-          sudo apt update && sudo apt install pkg-config libudev-dev
+          sudo apt update && sudo apt install pkg-config libudev-dev libssl-dev openssl
 
       - name: Install packages (macOS)
         if: matrix.os == 'macos-latest'
