--- a/fmt/Cargo.toml
+++ b/fmt/Cargo.toml
@@ -6,7 +6,7 @@ description = "Foundry's solidity formatting and linting support"
 
 [dependencies]
 indent_write = "2.2.0"
-solang = { git = "https://github.com/shekhirin/solang", branch = "feat/feature-gate-llvm", default-features = false }
+solang = { git = "https://github.com/hyperledger-labs/solang", default-features = false }
 
 [dev-dependencies]
 pretty_assertions = "1.0.0"
