--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,10 @@ lto = true
 codegen-units = 1
 panic = "abort"
 debug = true
+
+[patch."https://github.com/gakonst/ethers-rs"]
+ethers = { git  = "https://github.com/mattsse/ethers-rs", branch = "matt/try-fix-sha2-asm" }
+ethers-core = { git  = "https://github.com/mattsse/ethers-rs", branch = "matt/try-fix-sha2-asm" }
+ethers-providers = { git  = "https://github.com/mattsse/ethers-rs", branch = "matt/try-fix-sha2-asm" }
+ethers-signers = { git  = "https://github.com/mattsse/ethers-rs", branch = "matt/try-fix-sha2-asm" }
+ethers-etherscan = { git  = "https://github.com/mattsse/ethers-rs", branch = "matt/try-fix-sha2-asm" }
