--- a/fmt/Cargo.toml
+++ b/fmt/Cargo.toml
@@ -6,6 +6,7 @@ description = "Foundry's solidity formatting and linting support"
 
 [dependencies]
 indent_write = "2.2.0"
+semver = "1.0.4"
 solang = { git = "https://github.com/hyperledger-labs/solang", default-features = false }
 
 [dev-dependencies]
