--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -67,13 +67,13 @@ jobs:
         env:
           cache-name: cache-forge
         with:
-          path: ./target/debug/forge
+          path: ./target/release/forge
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ steps.vars.outputs.sha_short }}
 
       # if couldn't get, install forge
       - name: Install forge
         if: steps.cache-forge.outputs.cache-hit != 'true'
-        run: cargo build --bin forge
+        run: cargo build --release --bin forge
 
       - name: Test ${{ matrix.repo }}
         run: ./test.sh ${{ matrix.repo }}
