run e2e on master push only

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -2,9 +2,8 @@ on:
   push:
     branches:
       - master
-  pull_request:
 
-name: e2e tests
+name: E2E tests
 
 env:
   ETH_RPC_URL: https://eth-mainnet.alchemyapi.io/v2/Lc7oIGYeL_QvInzI0Wiu_pOZZDEKBrdf
