Revert "fix: try using platform dependent sha2/asm activation"
This reverts commit f589c082c019ccc7ec4feee041da9ba15694cd89.

The target architecture configs seem to not be respected by Cargo.

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -114,23 +114,23 @@ jobs:
           cargo -V
           rustc -V
 
-      - name: Build foundry crates
+      - name: Build foundry and call crates
         uses: actions-rs/cargo@v1
         with:
           use-cross: ${{ matrix.job.use-cross }}
           command: build
-          args: --verbose --workspace
+          args: --no-default-features --verbose --workspace
 
       - name: Run forge
         uses: actions-rs/cargo@v1
         with:
           use-cross: ${{ matrix.job.use-cross }}
           command: run
-          args: -p foundry-cli --bin forge -- --help
+          args: -p foundry-cli --no-default-features --bin forge -- --help
 
-      - name: Run tests
+      - name: Run tests without --default-features to avoid solc-asm being used
         uses: actions-rs/cargo@v1
         with:
           use-cross: ${{ matrix.job.use-cross }}
           command: test
-          args: --verbose --workspace
+          args: --verbose --no-default-features --workspace
