--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -40,7 +40,8 @@ once_cell = "1.8.0"
 tempdir = "0.3.7"
 
 [features]
-default = ["sputnik-evm", "rustls"]
+default = ["sputnik-evm", "solc-asm", "rustls"]
+solc-asm = ["ethers/solc-sha2-asm"]
 rustls = ["ethers/rustls"]
 openssl = ["ethers/openssl"]
 
