chore: default to not using sha2-asm

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -119,18 +119,18 @@ jobs:
         with:
           use-cross: ${{ matrix.job.use-cross }}
           command: build
-          args: --no-default-features --verbose --workspace
+          args: --verbose --workspace
 
       - name: Run forge
         uses: actions-rs/cargo@v1
         with:
           use-cross: ${{ matrix.job.use-cross }}
           command: run
-          args: -p foundry-cli --no-default-features --bin forge -- --help
+          args: -p foundry-cli --bin forge -- --help
 
       - name: Run tests without --default-features to avoid solc-asm being used
         uses: actions-rs/cargo@v1
         with:
           use-cross: ${{ matrix.job.use-cross }}
           command: test
-          args: --verbose --no-default-features --workspace
+          args: --verbose --workspace
