--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -114,6 +114,10 @@ jobs:
           cargo -V
           rustc -V
 
+      - uses: Swatinem/rust-cache@v1
+        with:
+          cache-on-failure: true
+
       - name: Build foundry and call crates
         uses: actions-rs/cargo@v1
         with:
