--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -118,23 +118,23 @@ jobs:
         with:
           cache-on-failure: true
 
-      - name: Build foundry and call crates
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: ${{ matrix.job.use-cross }}
-          command: build
-          args: --verbose --workspace
-
-      - name: Run forge
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: ${{ matrix.job.use-cross }}
-          command: run
-          args: -p foundry-cli --bin forge -- --help
+#      - name: Build foundry and call crates
+#        uses: actions-rs/cargo@v1
+#        with:
+#          use-cross: ${{ matrix.job.use-cross }}
+#          command: build
+#          args: --verbose --workspace
+#
+#      - name: Run forge
+#        uses: actions-rs/cargo@v1
+#        with:
+#          use-cross: ${{ matrix.job.use-cross }}
+#          command: run
+#          args: -p foundry-cli --bin forge -- --help
 
       - name: Run tests without --default-features to avoid solc-asm being used
         uses: actions-rs/cargo@v1
         with:
           use-cross: ${{ matrix.job.use-cross }}
           command: test
-          args: --verbose --workspace
+          args: --verbose --workspace -- --nocapture
