--- a/cast/Cargo.toml
+++ b/cast/Cargo.toml
@@ -8,13 +8,14 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 foundry-utils = { path = "../utils" }
-ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
-ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
-ethers-signers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+ethers-core = { git = "https://github.com/pyk/ethers-rs", branch = "optimism-support", default-features = false }
+ethers-providers = { git = "https://github.com/pyk/ethers-rs", branch = "optimism-support", default-features = false }
+ethers-signers = { git = "https://github.com/pyk/ethers-rs", branch = "optimism-support", default-features = false }
 eyre = "0.6.5"
 rustc-hex = "2.1.0"
 serde_json = "1.0.67"
 chrono = "0.2"
+syn = "1.0.83"
 
 [features]
 default = ["ledger", "trezor"]
