--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -10,5 +10,10 @@ readme = "README.md"
 
 [dependencies]
 dirs-next = "2.0"
+semver = "1.0.4"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.73"
 toml = "0.5"
+ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+figment = { version = "0.10", features = ["toml", "env"] }
