--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,11 @@ lto = true
 codegen-units = 1
 panic = "abort"
 debug = true
+
+
+[patch."https://github.com/gakonst/ethers-rs"]
+ethers = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/add-source-map-parser" }
+ethers-core = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/add-source-map-parser" }
+ethers-providers = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/add-source-map-parser" }
+ethers-signers = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/add-source-map-parser" }
+ethers-etherscan = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/add-source-map-parser" }
