--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,12 @@ lto = true
 codegen-units = 1
 panic = "abort"
 debug = true
+
+
+[patch."https://github.com/gakonst/ethers-rs"]
+ethers = { path = "../ethers-rs" }
+ethers-core = { path = "../ethers-rs/ethers-core" }
+ethers-providers = { path = "../ethers-rs/ethers-providers" }
+ethers-signers = { path = "../ethers-rs/ethers-signers" }
+ethers-etherscan = { path = "../ethers-rs/ethers-etherscan" }
+ethers-solc = { path = "../ethers-rs/ethers-solc" }
