--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 structopt = "0.3.23"
+forge-fmt = { path = "../fmt" }
 foundry-utils = { path = "../utils" }
 forge = { path = "../forge" }
 cast = { path = "../cast" }
@@ -35,6 +36,8 @@ git2 = "0.13.22"
 glob = "0.3.0"
 semver = "1.0.4"
 once_cell = "1.8.0"
+walkdir = "2.3.2"
+solang = { git = "https://github.com/hyperledger-labs/solang", default-features = false }
 
 [dev-dependencies]
 tempdir = "0.3.7"
