--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -12,8 +12,8 @@ ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features =
 
 eyre = { version = "0.6.5", default-features = false }
 hex = "0.4.3"
-reqwest = "0.11.8"
+reqwest = { version = "0.11.8", features = ["json"] }
 rustc-hex = { version = "2.1.0", default-features = false }
 serde = "1.0.132"
 serde_json = { version = "1.0.67", default-features = false }
-tokio = "1.15.0"
+tokio = { version = "1.15.0", features = ["macros"] }
