--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -11,5 +11,5 @@ crossterm = "0.22.1"
 tui = {  version = "0.16.0", default-features = false, features = ["crossterm"] }
 evm-adapters = {path = "../evm-adapters", features = ["sputnik"] }
 eyre = "0.6.5"
-hex = "*"
+hex = "0.4.3"
 ethers = { git = "https://github.com/gakonst/ethers-rs" }
