--- a/cast/Cargo.toml
+++ b/cast/Cargo.toml
@@ -16,6 +16,7 @@ rustc-hex = "2.1.0"
 serde_json = "1.0.67"
 chrono = "0.2"
 hex = "0.4.3"
+reqwest = "0.11.8"
 
 [features]
 default = ["ledger", "trezor"]
